--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   google_fonts: ^6.1.0
+  image_picker: ^1.0.7
+  sqflite: ^2.3.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
   flutter:
     sdk: flutter
 
